Revive demos and support JDKs >8 (#5)