@@ -420,7 +420,7 @@ public class DaikonSimple {
 
     // pointer to last nonce so we can associate the object entry
     // with the right enter entry
-    Integer last_nonce = new Integer(-1);
+    Integer last_nonce = Integer.valueOf(-1);
 
 
     /**
