@@ -95,10 +95,10 @@ public final class SequencesJoin
       Object e1 = null;
       Object e2 = null;
       if (val1 instanceof long[]) {
-        e1 = new Long (((long[]) val1) [i]);
+        e1 = Long.valueOf(((long[]) val1) [i]);
       }
       if (val2 instanceof long[]) {
-        e2 = new Long (((long[]) val2) [i]);
+        e2 = Long.valueOf(((long[]) val2) [i]);
       }
       if (val1 instanceof Object[]) {
         e1 = ((Object[]) val1) [i];
@@ -106,8 +106,8 @@ public final class SequencesJoin
       if (val2 instanceof Object[]) {
         e2 = ((Object[]) val2) [i];
       }
-      if (e1 == null) e1 = new Long(0);
-      if (e2 == null) e2 = new Long(0);
+      if (e1 == null) e1 = Long.valueOf(0);
+      if (e2 == null) e2 = Long.valueOf(0);
       result[i] = (e1.hashCode() << 8) + e2.hashCode();
     }
 
